--- a/index.html
+++ b/index.html
@@ -4,11 +4,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
-    <link rel="stylesheet" href="screen.css">
+    <title>Online Flea Market!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <!-- Your Custom CSS -->
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Heading</h1>
-    <script src="index.js"></script>
-  </body>
+
+    <!-- Header Section -->
+    <div class="container-fluid bg-light p-5">
+      <div class="row align-items-center">
+          <!-- Image Column -->
+          <div class="col-md-6">
+              <img src="images/Desk_Accessories_60-400x300.jpg" alt="At your computer." class="img-fluid">
+          </div>
+
+          <!-- Text Column -->
+          <div class="col-md-6 text-center">
+              <h1 class="display-4">Welcome to the Online Flea Market!</h1>
+          </div>
+      </div>
+  </div>
+
+    <!-- Description Section -->
+    <div class="container my-4">
+      <p>
+        Explore a wide range of products, from vintage collectibles to modern gadgets, at our online flea market. Discover unique finds and everyday essentials at unbeatable prices! Experience the awe of shopping from the comfort of your home, where the world of flea markets is at your fingertips. Feel the thrill of exploring a growing gallery of eclectic items, each with its own story and charm. Enjoy the convenience of browsing through a myriad of treasures and buying with just a click of a button. Our online flea market brings the excitement of traditional flea market shopping to you, blending the old with the new in a seamless, digital experience. Find rare artifacts, trendy accessories, and hidden gems all in one place. Join us in celebrating the diversity and vibrancy of the flea market culture, reimagined for the digital age. 
+      </p>
+      <p class="text-center mt-4">
+        <strong>Ready to discover your next treasure? Dive into our collection and embark on your unique shopping adventure today!</strong>
+      </p>
+    </div>
+
+    <!-- Carousel Section -->
+    <div class="container my-4">
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/antique_license_plates_booth.webp" class="d-block w-100" alt="antique license plates booth">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>License Plates Booth</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/antique_silver_booth.webp" class="d-block w-100" alt="antique silver booth">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Antique Silver Booth</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/beaded_necklace_booth.webp" class="d-block w-100" alt="beaded necklace booth">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Beaded Necklace Booth</h5>       
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+
+    <!-- Product Cards Section -->
+    <div class="container my-4">
+        <div class="row">
+            <!-- [Insert Product Cards Here] -->
+        </div>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+</body>
 </html>
