--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-    <!-- Your Custom CSS -->
+    <!-- My Custom CSS -->
     <link href="styles.css" rel="stylesheet">
   </head>
   <body>
 
     <!-- Header Section -->
     <div class="container-fluid bg-light p-5">
-      <div class="row align-items-center">
-          <!-- Image Column -->
-          <div class="col-md-6">
-              <img src="images/Desk_Accessories_60-400x300.jpg" alt="At your computer." class="img-fluid">
+      <div class="row align-items-center justify-content-center">
+        <!-- Image Column -->
+        <div class="col-lg-5 col-md-5 col-sm-10 text-center">
+          <img src="images/Desk_Accessories_60-400x300.jpg" alt="At your computer." class="img-fluid rounded-circle bordered-image">
+        </div>
+    
+        <!-- Text Column -->
+        <div class="col-lg-5 col-md-5 col-sm-10 text-center">
+          <div class="text-container px-md-3">
+            <h1 class="display-4">Welcome to the Online Flea Market!</h1>
           </div>
-
-          <!-- Text Column -->
-          <div class="col-md-6 text-center">
-              <h1 class="display-4">Welcome to the Online Flea Market!</h1>
-          </div>
+        </div>
       </div>
-  </div>
+    </div>
 
     <!-- Description Section -->
     <div class="container my-4">
@@ -45,24 +47,73 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8" aria-label="Slide 9"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9" aria-label="Slide 10"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/antique_license_plates_booth.webp" class="d-block w-100" alt="antique license plates booth">
+            <img src="images/antique_license_plates_booth.webp" class="d-block w-100" alt="antique license plates booth" data-bs-toggle="tooltip" data-bs-placement="top" title="Discover a variety of vintage license plates from different states and eras.">
             <div class="carousel-caption d-none d-md-block">
               <h5>License Plates Booth</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/antique_silver_booth.webp" class="d-block w-100" alt="antique silver booth">
+            <img src="images/antique_silver_booth.webp" class="d-block w-100" alt="antique silver booth" data-bs-toggle="tooltip" title="Explore our exquisite collection of antique silverware and unique silver artifacts.">
             <div class="carousel-caption d-none d-md-block">
               <h5>Antique Silver Booth</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/beaded_necklace_booth.webp" class="d-block w-100" alt="beaded necklace booth">
+            <img src="images/beaded_necklace_booth.webp" class="d-block w-100" alt="beaded necklace booth" data-bs-toggle="tooltip" title="Discover a range of handcrafted beaded necklaces, each with its own unique design and style.">
             <div class="carousel-caption d-none d-md-block">
               <h5>Beaded Necklace Booth</h5>       
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/books_booth.webp" class="d-block w-100" alt="books booth" data-bs-toggle="tooltip" title="Step into a world of stories with our diverse collection of books ranging from timeless classics to modern bestsellers.">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Books Booth</h5>       
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/clock_booth.webp" class="d-block w-100" alt="clock booth" data-bs-toggle="tooltip" title="Discover the elegance of time with our curated collection of vintage and contemporary clocks.">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Clocks Booth</h5>       
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/clothes_booth.webp" class="d-block w-100" alt="clothes booth" data-bs-toggle="tooltip" title="Discover a new style from vintage, lightly used clothes.">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Clothes Booth</h5>       
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/dinnerware_booth.webp" class="d-block w-100" alt="dinnerware booth" data-bs-toggle="tooltip" title="Set your table with our exquisite dinnerware collections, from elegant vintage patterns to modern chic designs perfect for any occasion.">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Dinnerware Booth</h5>       
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/fresh_produce_booth.webp" class="d-block w-100" alt="fresh produce booth" data-bs-toggle="tooltip" title="Experience the taste of freshness with our locally-sourced, organic produce. From farm to table, nourish your health with nature's best.">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Fresh Produce Booth</h5>       
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/porcelain_knicnacks_booth.webp" class="d-block w-100" alt="porcelain knicnacks booth" data-bs-toggle="tooltip" title="Discover the charm of handcrafted porcelain knicnacks, perfect for adding a touch of elegance and whimsy to your home decor.">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Porcelain Knicnacks Booth</h5>       
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/toy_booth.webp" class="d-block w-100" alt="toy booth" data-bs-toggle="tooltip" title="Rediscover the joy of play with our eclectic collection of toys for all ages. From vintage classics to the latest trends, find the perfect gift to spark imagination.">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Toy Booth</h5>       
             </div>
           </div>
         </div>
@@ -77,15 +128,26 @@
       </div>
     </div>
 
-    <!-- Product Cards Section -->
+    <!-- Contact Button Section -->
     <div class="container my-4">
-        <div class="row">
-            <!-- [Insert Product Cards Here] -->
+      <div class="row">
+        <div class="col text-center">
+          <a href="contact.html" class="btn btn-primary" role="button">Contact Booth</a>
         </div>
+      </div>
     </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
+    <!-- Tooltip Initialization Script -->
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+        var tooltipList = tooltipTriggerList.map(function(tooltipTriggerEl) {
+          return new bootstrap.Tooltip(tooltipTriggerEl);
+        });
+      });
+    </script>
 </body>
 </html>
