Tooltip instructions. h5 always shows.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 
     <!-- Carousel Section -->
     <div class="container my-4">
+      <!-- Instruction for Tooltips -->
+      <div class="text-center mb-2">
+        <p>Click or hover over the pictures to see more information.</p>
+      </div>
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -58,62 +62,62 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="images/antique_license_plates_booth.webp" class="d-block w-100" alt="antique license plates booth" data-bs-toggle="tooltip" data-bs-placement="top" title="Discover a variety of vintage license plates from different states and eras.">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>License Plates Booth</h5>
+            <div class="carousel-caption d-md-block">
+              <h5 class="d-block h6-sm">License Plates Booth</h5>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/antique_silver_booth.webp" class="d-block w-100" alt="antique silver booth" data-bs-toggle="tooltip" title="Explore our exquisite collection of antique silverware and unique silver artifacts.">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Antique Silver Booth</h5>
+            <div class="carousel-caption  d-md-block">
+              <h5 class="d-block h6-sm">Antique Silver Booth</h5>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/beaded_necklace_booth.webp" class="d-block w-100" alt="beaded necklace booth" data-bs-toggle="tooltip" title="Discover a range of handcrafted beaded necklaces, each with its own unique design and style.">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Beaded Necklace Booth</h5>       
+            <div class="carousel-caption d-md-block">
+              <h5 class="d-block h6-sm">Beaded Necklace Booth</h5>       
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/books_booth.webp" class="d-block w-100" alt="books booth" data-bs-toggle="tooltip" title="Step into a world of stories with our diverse collection of books ranging from timeless classics to modern bestsellers.">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Books Booth</h5>       
+            <div class="carousel-caption d-md-block">
+              <h5 class="d-block h6-sm">Books Booth</h5>       
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/clock_booth.webp" class="d-block w-100" alt="clock booth" data-bs-toggle="tooltip" title="Discover the elegance of time with our curated collection of vintage and contemporary clocks.">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Clocks Booth</h5>       
+            <div class="carousel-caption d-md-block">
+              <h5 class="d-block h6-sm">Clocks Booth</h5>       
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/clothes_booth.webp" class="d-block w-100" alt="clothes booth" data-bs-toggle="tooltip" title="Discover a new style from vintage, lightly used clothes.">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Clothes Booth</h5>       
+            <div class="carousel-caption d-md-block">
+              <h5 class="d-block h6-sm">Clothes Booth</h5>       
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/dinnerware_booth.webp" class="d-block w-100" alt="dinnerware booth" data-bs-toggle="tooltip" title="Set your table with our exquisite dinnerware collections, from elegant vintage patterns to modern chic designs perfect for any occasion.">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Dinnerware Booth</h5>       
+            <div class="carousel-caption d-md-block">
+              <h5 class="d-block h6-sm">Dinnerware Booth</h5>       
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/fresh_produce_booth.webp" class="d-block w-100" alt="fresh produce booth" data-bs-toggle="tooltip" title="Experience the taste of freshness with our locally-sourced, organic produce. From farm to table, nourish your health with nature's best.">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Fresh Produce Booth</h5>       
+            <div class="carousel-caption d-md-block">
+              <h5 class="d-block h6-sm">Fresh Produce Booth</h5>       
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/porcelain_knicnacks_booth.webp" class="d-block w-100" alt="porcelain knicnacks booth" data-bs-toggle="tooltip" title="Discover the charm of handcrafted porcelain knicnacks, perfect for adding a touch of elegance and whimsy to your home decor.">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Porcelain Knicnacks Booth</h5>       
+            <div class="carousel-caption d-md-block">
+              <h5 class="d-block h6-sm">Porcelain Knicnacks Booth</h5>       
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/toy_booth.webp" class="d-block w-100" alt="toy booth" data-bs-toggle="tooltip" title="Rediscover the joy of play with our eclectic collection of toys for all ages. From vintage classics to the latest trends, find the perfect gift to spark imagination.">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Toy Booth</h5>       
+            <div class="carousel-caption d-md-block">
+              <h5 class="d-block h6-sm">Toy Booth</h5>       
             </div>
           </div>
         </div>
@@ -127,6 +131,7 @@
         </button>
       </div>
     </div>
+
 
     <!-- Contact Button Section -->
     <div class="container my-4">
