Small CSS adjustments.

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                         <textarea class="form-control" id="questionTextarea" rows="4" placeholder="Your message here" required data-bs-toggle="tooltip" title="Please provide your question or comment in the box provided."></textarea>
                     </div>
 
-                        
+                    <!-- Buttons -->    
                     <div class="text-center">
                         <!-- Back Button -->
                         <a href="index.html" class="btn btn-secondary me-4" role="button" data-bs-toggle="tooltip" title="Return to the homepage.">Back</a>
